reasoning_transformations/CRUXEval/Transformations/logs/sample_137.log
STARTING AT 2024-10-19 21:56:43.529295
[START] processing file: sample_137
*Running tests for: sample_137
 
Result: ['tests_pass']
tests_pass sample_137 /home/yang/Benchmark/dataset/cruxeval/code//sample_137.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: sample_137
 
Result: ['tests_pass']
Checking transformation add_nested_if
*Running tests for: sample_137
 
Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: sample_137
 
Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: sample_137
   File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_137", line 16
    break
    ^^^^^
SyntaxError: 'break' outside loop

output_actual, stderr_data: ('', b'  File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_137", line 16\n    break\n    ^^^^^\nSyntaxError: \'break\' outside loop\n')
Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_datetime
*Running tests for: sample_137
 
Result: ['tests_pass']
Checking transformation add_time
*Running tests for: sample_137
 
Result: ['tests_pass']
Checking transformation create_functions
*Running tests for: sample_137
 
Result: ['tests_pass']
Checking transformation add_decorator
*Running tests for: sample_137
 
Result: ['tests_pass']
Checking transformation add_http
*Running tests for: sample_137
 
Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: sample_137
 
Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: sample_137
 
Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: sample_137
 
Result: ['tests_pass']
The file 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_137.py' has been formatted successfully.
Checking reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_137.py
*Running tests for: sample_137
 
Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_nested_if',
                        'add_try_except_inside_functions',
                        'add_else_to_for',
                        'add_nested_list',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'create_functions',
                        'add_decorator',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil',
                        'changing_AugAssign'],
  'diff_output': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_137.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/cruxeval/',
  'exception': None,
  'file_id': 'sample_137',
  'genetic_algorithm': None,
  'original_code': 'def f(nums):\n'
                   '    count = 0\n'
                   '    for i in range(len(nums)):\n'
                   '        if len(nums) == 0:\n'
                   '            break\n'
                   '        if count % 2 == 0:\n'
                   '            nums.pop()\n'
                   '        else:\n'
                   '            nums.pop(0)\n'
                   '        count += 1\n'
                   '    return nums',
  'patch_path': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_137.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/cruxeval/code//sample_137.py',
  'target_file': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_137.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 5.045247,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      '\n'
                      'def my_decorator(func):\n'
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      '    ttest_ind([71, 72, 57], [43, 25, 9])\n'
                      '    return dec_result\n'
                      '\n'
                      '@my_decorator\n'
                      'def newFunc_BinOp0(a, b):\n'
                      '    return a // b\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def f(nums):\n'
                      "    HTTPConnection('google.com', port=80)\n"
                      "    parse('2024-10-19 21:56:47')\n"
                      '    datetime.datetime.now()\n'
                      "    base64.b64encode(b'62020356108532048255')\n"
                      '    time.sleep(0.05)\n'
                      '    shuffle([93, 66, 23])\n'
                      '    Fernet.generate_key()\n'
                      '    try:\n'
                      '        count = [0][0]\n'
                      '        LoopChecker13 = 290\n'
                      '        LoopChecker23 = 289\n'
                      '        ConditionChecker17 = 398\n'
                      '        ConditionChecker27 = 170\n'
                      '        for LoopIndexOut in '
                      'range(newFunc_BinOp0(LoopChecker13, LoopChecker23)):\n'
                      '            for newi_1 in range(len(nums)):\n'
                      '                if ConditionChecker17 & '
                      'ConditionChecker27:\n'
                      '                    if len(nums) == 0:\n'
                      '                        break\n'
                      '                if count % 2 == 0:\n'
                      '                    nums.pop()\n'
                      '                else:\n'
                      '                    nums.pop(0)\n'
                      '                count = count + 1\n'
                      '        else:\n'
                      '            pass\n'
                      '        return nums\n'
                      '    except:\n'
                      '        pass'}
[END] processing file: sample_137. Total Time: 5.045247
END AT 2024-10-19 21:56:48.576759
